crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_positional_looks_like_flag.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unknown flag: --help
   ╭─[ <cli>:1:8 ]
   │
 1 │ create --help
   │        ───┬──  
   │           ╰──── unknown flag: --help
───╯
